--- a/index.html
+++ b/index.html
@@ -7,82 +7,140 @@
     .form-container {
       max-width: 800px;
       margin: 20px auto;
-      padding: 20px;
-      background: #f5f5f5;
+      padding: 30px;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .section {
-      background: white;
-      padding: 20px;
+      background: #f8f9fa;
+      padding: 25px;
+      margin-bottom: 25px;
+      border-radius: 10px;
+      border: 1px solid #e9ecef;
+    }
+
+    .section h3 {
+      color: #2c3e50;
       margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      padding-bottom: 10px;
+      border-bottom: 2px solid #4CAF50;
     }
 
     .form-group {
       display: flex;
-      flex-direction: column;
-      margin-bottom: 15px;
+      align-items: center;
+      margin-bottom: 20px;
     }
 
     .form-group label {
-      margin-bottom: 5px;
+      width: 200px;
       font-weight: 500;
+      color: #495057;
+      text-align: right;
+      padding-right: 15px;
     }
 
     .form-group input, 
     .form-group select {
-      padding: 8px;
-      width: 100%;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ced4da;
+      border-radius: 6px;
+      transition: border-color 0.2s;
+    }
+
+    .form-group input:focus,
+    .form-group select:focus {
+      outline: none;
+      border-color: #4CAF50;
+      box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.1);
+    }
+
+    .checkbox-label {
+      display: flex;
+      flex-direction: row !important;
+      align-items: center;
+      gap: 8px;
+      width: auto !important;
+      text-align: left !important;
+    }
+
+    .checkbox-label input[type="checkbox"] {
+      width: auto !important;
+      margin: 0;
     }
 
     .radio-group {
       display: flex;
+      flex-wrap: wrap;
       gap: 20px;
       margin: 10px 0;
+      max-width: 100%;
+    }
+
+    .form-group .radio-group {
+      flex: 1;
+      padding-left: 15px;
     }
 
     .radio-label {
       display: flex;
       align-items: center;
-      gap: 5px;
-    }
-
-    .checkbox-label {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      margin: 10px 0;
+      gap: 8px;
     }
 
     .required:after {
       content: "*";
-      color: red;
-      margin-left: 3px;
+      color: #dc3545;
+      margin-left: 4px;
     }
 
     .checkbox-group {
       display: flex;
-      gap: 20px;
-      margin: 20px 0;
+      justify-content: center;
+      gap: 25px;
+      margin: 25px 0;
       flex-wrap: wrap;
-    }
-
-    .input-group {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 15px;
+      padding: 15px;
+      background: #e9ecef;
+      border-radius: 8px;
     }
 
     button {
-      background: #0066cc;
+      background: #4CAF50;
       color: white;
-      padding: 12px 24px;
+      padding: 12px 30px;
       border: none;
+      border-radius: 6px;
       cursor: pointer;
-      margin-top: 20px;
+      font-size: 16px;
+      font-weight: 500;
+      transition: background 0.2s;
+      display: block;
+      margin: 30px auto 0;
+    }
+
+    button:hover {
+      background: #45a049;
+    }
+
+    .activation-checkboxes {
+      display: flex;
+      flex-direction: row;
+      gap: 15px;
+      padding: 20px;
+      background: #f8f9fa;
+      border-radius: 8px;
+      margin: 20px 0;
+    }
+
+    .activation-checkboxes .checkbox-label {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 5px 0;
     }
   </style>
 </head>
